--- a/_posts/2000-01-05-hobbies.md
+++ b/_posts/2000-01-05-hobbies.md
@@ -16,4 +16,5 @@ My serious hobbies include:
 + [custom keyboards](https://mull.in/tags/keyboard/)
 + [endurance swimming](https://mull.in/posts/forgetting-to-drown/)
 + [writing](https://mull.in/tags/fav/)
++ [travel](https://mull.in/posts/amazona/)
 
