--- a/_posts/2000-01-02-career.md
+++ b/_posts/2000-01-02-career.md
@@ -9,8 +9,7 @@ color: black
 
 I thrive on autonomy.\
 I like to nurture long, meaningful relationships with the companies I work with.\
-I value impact over status.\
-I am skilled at the following roles:
+I value impact over status.
 
 ### Intrapreneur
 + I am deliberate at decision making and methodical at planning.\
