--- a/_posts/2000-01-03-workex.md
+++ b/_posts/2000-01-03-workex.md
@@ -5,9 +5,7 @@ color: black
 # fa-icon: toggle-on
 ---
 
-# Work Experience: 2007-today
-
-- - -
+## Work Experience: 2007-today
 
 ### Hitachi Payments: 2011-today
 #### Vice President, Assistant Vice President
@@ -27,8 +25,8 @@ I built systems and instituted programs across the company that have an extensiv
 #### Owner
 
 With the primary goal of building a better personal finance product, I worked on multiple projects while acquiring and honing relevant expertise.
-+ **[icedtea.app](https://icedtea.app)**: I invented (and use) a financial framework that helps a family live the fullest lives that their financial resources allow, by tinkering with lifestyle instead of overwhelming them with jargon. The product wiki is at [icedtea.app]. My career goal is to take this public.
-+ **[Keyboards](http://mull.in/tags/keyboard/)**: I invented and adopted a 36 button easily transition-able, ergonomic alternate to the standard 108 button QWERTY layout. I learnt 3D printing, laser-cutting, etc. to decide on my hardware.
++ **[icedtea.app](https://icedtea.app){:target="_blank"}**: I invented (and use) a financial framework that helps a family live the fullest lives that their financial resources allow, by tinkering with lifestyle instead of overwhelming them with jargon. The [product wiki](https://icedtea.app){:target="_blank"} is a work in progress. My career goal is to take this public.
++ **[Keyboards](http://mull.in/tags/keyboard/){:target="_blank"}**: I invented and adopted a 36 button easily transition-able, ergonomic alternate to the standard 108 button QWERTY layout. I learnt 3D printing, laser-cutting, etc. to decide on my hardware.
 + **Productivity** (frameworks, apps): I engaged with developers and user communities, authored open-source plugins and feature requests. I am proficient with productivity tools like Obsidian, Notion, Github, Asana. 
 
 - - -
@@ -47,5 +45,3 @@ At Lehman Brothers and Nomura, I managed trading books worth an excess of 1 bill
 
 + I built a 6-legged robot and explored the impact of gait on battery life.
 + I was encouraged to apply for a PhD position based on my performance.
-
-
