--- a/_posts/2000-01-05-hobbies.md
+++ b/_posts/2000-01-05-hobbies.md
@@ -12,9 +12,9 @@ I take my Hobbies seriously. I nurture them over years and often chose those tha
 + Swing dancing has become a part of my fitness routine.
 
 My serious hobbies include:
-+ [swing dancing](https://www.youtube.com/user/manogna444/videos)
-+ [custom keyboards](https://mull.in/tags/keyboard/)
-+ [endurance swimming](https://mull.in/posts/forgetting-to-drown/)
-+ [writing](https://mull.in/tags/fav/)
-+ [travel](https://mull.in/posts/amazona/)
++ [custom keyboards](https://mull.in/tags/keyboard/){:target="_blank"}
++ [swing dancing](https://www.youtube.com/user/manogna444/videos){:target="_blank"}
++ [endurance swimming](https://mull.in/posts/forgetting-to-drown/){:target="_blank"}
++ [writing](https://mull.in/tags/fav/){:target="_blank"}
++ [travel](https://mull.in/posts/amazona/){:target="_blank"}
 
