--- a/_posts/2000-01-05-uni.md
+++ b/_posts/2000-01-05-uni.md
@@ -18,5 +18,5 @@ I explored the Liberal Arts with courses in Creative Writing, Science Fiction, D
 
 #### Extra Curriculars
 
-+ I won awards in debates, other speaking events, writing and dramatics.
++ I won awards in debates, speaking events, writing and dramatics.
 + I was the Public Relations co-head of the university cutural festival, Saarang.
