--- a/_posts/2000-01-06-contact.md
+++ b/_posts/2000-01-06-contact.md
@@ -7,14 +7,14 @@ color: black
 
 ## Contact
 
-<manogna@gmail.com> is the best way to get in touch with me directly.
+<manogna@gmail.com>{:target="_blank"} is the best way to get in touch with me directly.
 
-[icedtea.app](https://icedtea.app) is a wiki about my fintech idea.
+[icedtea.app](https://icedtea.app){:target="_blank"} is a wiki about my fintech idea.
 
-[mull.in](https://mull.in) is my blog about keyboards, travel, writing and other interests.
+[mull.in](https://mull.in){:target="_blank"} is my blog about keyboards, travel, writing and other interests.
 
-I engage with open-source projects as [manogna4](https://github.com/manogna4) on github.
+### community engagement
 
-I engage with communities on keyboards and linguistics as [manogna4](https://www.reddit.com/user/manogna4) on reddit.
-
-I engage with the [obsidian](https://obsidian.md/) and [imdone](https://imdone.io/) communities on their respective discord servers.
++ on open-source projects via [manogna4](https://github.com/manogna4){:target="_blank"} on github.
++ on keyboards and linguistics via [manogna4](https://www.reddit.com/user/manogna4){:target="_blank"} on reddit.
++ with the [obsidian](https://obsidian.md/){:target="_blank"} and [imdone](https://imdone.io/){:target="_blank"} communities on their discord servers.
