better icedtea descr

--- a/_posts/2000-01-01-mano.md
+++ b/_posts/2000-01-01-mano.md
@@ -14,7 +14,9 @@ I am an Intrapreneur, a Data Professional and a Product Designer.\
 A friend suggested I shorten it all to 'Full Stack Analytics Leader', so I will.\
 **I am a Full Stack Analytics Leader.**
 
-I invented a financial framework that helps families by tinkering with their lifestyle, instead of overwhelming them with jargon. I call it icedtea.\
+I invented a financial framework for humans.\
+It helps families by tinkering with their lifestyle, instead of overwhelming them with jargon.\
+I call it icedtea. I am working on the app layer.\
 **I'll take [icedtea](https://icedtea.app){:target="_blank"} public someday.**
 
 I take my hobbies seriously. I nurture them over years, and often chose those that can improve other aspects of my life.\
