--- a/_posts/2000-01-01-mano.md
+++ b/_posts/2000-01-01-mano.md
@@ -7,19 +7,20 @@ color: black
 
 **Hi, I am Mano.**\
 My documents insist I should go by 'Manogna Mano'.\
-<manogna@gmail.com>{:target="_blank"} is the best way to get in touch with me directly.
+<manogna@gmail.com>{:target="_blank"} is the best way to get in touch with me.
 
 
 I am an Intrapreneur, a Data Professional and a Product Designer.\
 A friend suggested I shorten it all to 'Full Stack Analytics Leader', so I will.\
 **I am a Full Stack Analytics Leader.**
 
-I invented a financial framework for humans.\
+I invented a human-centred financial framework.\
 It helps families by tinkering with their lifestyle, instead of overwhelming them with jargon.\
-I call it icedtea. I am working on the app layer.\
-**I'll take [icedtea](https://icedtea.app){:target="_blank"} public someday.**
+I call it icedtea. I am working on the app layer...\
+**I'll make [icedtea](https://icedtea.app){:target="_blank"} a public product someday.**
 
-I take my hobbies seriously. I nurture them over years, and often chose those that can improve other aspects of my life.\
+I take my hobbies seriously.\
+I nurture them over years, and often chose those that can improve other aspects of my life.\
 **I am a [Hobbyist](#hobbies).**
 
 I grew up in India, Oman and UK.\
