--- a/_posts/2000-01-03-workex.md
+++ b/_posts/2000-01-03-workex.md
@@ -5,24 +5,50 @@ color: black
 # fa-icon: toggle-on
 ---
 
-## Work Experience: 2007-today
+## Work Experience
+
+<!-- <br> -->
 
 ### Hitachi Payments: 2011-today
-#### Vice President, Assistant Vice President
+#### Vice President
 
-I built systems and instituted programs across the company that have an extensive, sustained impact on profitability and efficiency.
-+ **Head, Data Analytics**: I created the Business Intelligence System that is the primary source of data and insight for business leaders across the firm. It does everything between collecting primary data from different verticals to managing remedial workflow at individual profit centers.
-+ **Team Building**: I recruited 6 people from my personal extended network at the Assistant Vice President level or higher.
-+ **Business Finance**: I built the annual budget based on unit-level monthly profits for 50,000 centers and owned the monitoring app and team.
-+ **Cash Logistics**: I authored a demand forecasting algorithm that decreased costs by 20%. I authored and owned the app that a 60-member team used to handle 15% of India’s ATMs.
-+ **Investor Relations**: I conducted detailed discussions on the financial projections of the company with prospective partners and investors.
-+ **Business Strategy**: I priced contracts, participated in reverse auctions,  and negotiated data-led contract clauses with customers and vendors.
-+ **Operations Strategy**: I created & managed the process, app & team that increased profitability by prioritizing downtime instances by revenue loss
+I joined the company in the early stages, when it was Prizm Payments. I was part of the core team of business leaders and played a key role in scaling it up to become a compelling acquisition for Hitachi (and others).
+
+Under Hitachi's aegis, I built systems and instituted programs across the company that have an extensive, sustained impact on profitability and efficiency.
+
+
+#### **Data Products, Head**
+
+I created the product stack that provides insight and actionables for business leaders across the firm. It's functionality spans assimilating primary data to managing remedial workflow at individual profit centers. I created the data warehouse and the business intelligence layer that provides the 'Single Source of Truth' for leaders and operators.
+
+Some Highlights:
+
++ **Cash Logistics**\
+I authored a demand forecasting algorithm that single-handedly decreased ATM costs by 5%. I authored and owned the product used to manage 15% of India’s ATMs.
++ **Business Finance**\
+I authored the annual budget individually for 50,000 profit centers broken by week based on seasonal demand, life cycle behaviour, gross national trends, and political assumptions.
+It allowed business leaders to identify problems as they happened.
+
+#### **Intrapreneurship**
+
+I was in the management team that conducted monthy performance reviews of the entire company. When suitable problems were identified in any department, I set up processes, built up teams and managed the projects until it they attained operational stability.
+
+Some highlights:
+
++ **Service Delivery**\
+When the business grew large enough to render escalation based prioritization methods ineffective, I engineered a process and managed a team that triaged outages by opportunity cost and customer demand. It increased profitability using existing manpower, and allowed delivery leaders to focus on de-escalating major issues.
++ **Company Culture**\
+When inter departmental coordination was recognized as a problem, I established a team of Territory Managers to own remedial actions. I created a weekly meeting format in which a managers took a 'data & story' approach to present how they solved problems. It fostered a culture of peer learning, nurtured relationships, and delivered quick results. Many managers later moved into other important roles in the company.
+
+#### **Others**
+
++ I recruited 6 people from my personal extended network at the Assistant Vice President level or higher.
++ I conducted discussions on the financial projections of the company with prospective partners and investors.
++ I participated in reverse auctions, and structured data-led contracts with customers and vendors.
 
 - - -
 
 ### icedtea.app & related projects: 2015-today
-#### Owner
 
 With the primary goal of building a better personal finance product, I worked on multiple projects while acquiring and honing relevant expertise.
 + **[icedtea.app](https://icedtea.app){:target="_blank"}**: I invented (and use) a financial framework that helps a family live the fullest lives that their financial resources allow, by tinkering with lifestyle instead of overwhelming them with jargon. The [product wiki](https://icedtea.app){:target="_blank"} is a work in progress. My career goal is to take this public.
@@ -43,5 +69,5 @@ At Lehman Brothers and Nomura, I managed trading books worth an excess of 1 bill
 ### Surrey Space Centre: 3 months in 2005
 #### Summer Internee
 
-+ I built a 6-legged robot and explored the impact of gait on battery life.
++ I built a 6-legged robot and explored the impact of gait on power consumption.
 + I was encouraged to apply for a PhD position based on my performance.
