--- a/_posts/2000-01-05-hobbies.md
+++ b/_posts/2000-01-05-hobbies.md
@@ -6,7 +6,10 @@ color: black
 ---
 
 ## Hobbies
-I take my Hobbies seriously. I nurture them over years and often chose those that can improve other aspects of my life. For example:
+I take my Hobbies seriously.\
+I nurture them over years, and often chose those that can improve other aspects of my life.\
+For example:
+
 + An interest in custom keyboards led me to improve on existing layouts, which increased the ease with which I code and write, which makes me a better professional.
 + My knowledge of linguistics led me to create a an alternate to the QWERTY keyboard layout that optimized for easy entry of English digrams.
 + Swing dancing has become a part of my fitness routine.
