--- a/_posts/2000-01-06-contact.md
+++ b/_posts/2000-01-06-contact.md
@@ -15,6 +15,10 @@ color: black
 
 ### community engagement
 
-+ on open-source projects via [manogna4](https://github.com/manogna4){:target="_blank"} on github.
-+ on keyboards and linguistics via [manogna4](https://www.reddit.com/user/manogna4){:target="_blank"} on reddit.
++ on open-source projects as [manogna4](https://github.com/manogna4){:target="_blank"} on github.
++ on keyboards and linguistics as [manogna4](https://www.reddit.com/user/manogna4){:target="_blank"} on reddit.
 + with the [obsidian](https://obsidian.md/){:target="_blank"} and [imdone](https://imdone.io/){:target="_blank"} communities on their discord servers.
+
+### networks
+
+I am on linked in as [Manogna-Mano](https://www.linkedin.com/in/manogna-mano){:target="_blank"}
