--- a/_posts/2000-01-02-career.md
+++ b/_posts/2000-01-02-career.md
@@ -8,22 +8,44 @@ color: black
 ## Career: 14 years
 
 I thrive on autonomy.\
-I like to nurture long, meaningful relationships with the companies I work with.\
-I value impact over status.
+I value impact over status.\
+I nurture long, meaningful relationships with the companies I work with.
 
-### Intrapreneur
-+ I am deliberate at decision making and methodical at planning.\
-I prioritize projects in my portfolio, and I am usually able to explain the ramifications of changing priorities in real time.
-+ I communicate regularly with stakeholders and operators, tailoring the mode and content for the audience.
+### **Intrapreneur:**
 
-### Full Stack Data Professional
-+ I specialize in quickly finding simple, practical solutions to business problems, showing results, and layering sophistication using that as a base.
-+ I do not hide behind data or jargon.\
-I believe that the stakeholder's comprehension is crucial to a sustainable solution.
-+ I am a generalist.\
-I have set up a data warehouse, authored predictive algorithms, created Business Intelligence dashboards for company-wide consumption, and performed ad hoc analyses in real-time decision-making scenarios.
+I am deliberate at decision making and methodical at planning.\
+I can usually explain the impact of changing my projects' priorities in real time.
 
-### Product Designer
-+ I am attracted to fundamental, human-centered problems and like to approach the solution from first principles.
-+ I am eager to acquire entirely new skills in pursuit of an appropriate solution.\
-This makes me skilled at adapting techniques from seemingly unrelated fields, and in extending existing techniques beyond their original scope.
+I am excellent at communicating with business leaders, operators and everyone in between.\
+I tailor my content and mode for the audience.
+
+### **Full Stack Data Professional:**
+
+I am skilled at quickly finding simple, practical solutions to business problems.\
+I layer sophistication on top.
+
+I believe that the stakeholder's comprehension is crucial to a sustainable solution.\
+I do not hide behind data or jargon.
+
+<!-- I am a generalist. I have:\
+• set up a data warehouse\
+• authored predictive algorithms\
+• developed and owned Data Products\
+• created Business Intelligence dashboards for company-wide consumption\
+• performed ad hoc analyses in real-time decision-making scenarios -->
+
+I am a generalist. I have:
++ set up a data warehouse
++ authored predictive algorithms
++ developed and owned data products
++ created Business Intelligence dashboards for company-wide consumption
++ performed ad hoc analyses in real-time decision-making scenarios
+
+
+### **Product Designer:**
+
+I am attracted to fundamental, human-centered problems.\
+I like to approach the solution from first principles.
+
+I am eager to acquire entirely new skills in pursuit of an appropriate solution.\
+I am adept at extending and adapting techniques beyond their original 
