--- a/_posts/2000-01-01-mano.md
+++ b/_posts/2000-01-01-mano.md
@@ -9,12 +9,11 @@ color: black
 My documents insist I should go by 'Manogna Mano'.\
 <manogna@gmail.com>{:target="_blank"} is the best way to get in touch with me.
 
-
 I am an Intrapreneur, a Data Professional and a Product Designer.\
 A friend suggested I shorten it all to 'Full Stack Analytics Leader', so I will.\
 **I am a Full Stack Analytics Leader.**
 
-I invented a human-centred financial framework.\
+I invented a human-centered financial framework.\
 It helps families by tinkering with their lifestyle, instead of overwhelming them with jargon.\
 I call it icedtea. I am working on the app layer...\
 **I'll make [icedtea](https://icedtea.app){:target="_blank"} a public product someday.**
@@ -25,3 +24,4 @@ I nurture them over years, and often chose those that can improve other aspects 
 
 I grew up in India, Oman and UK.\
 I've taken months off work to travel in Europe and South America.
+
