--- a/_posts/2000-01-03-workex.md
+++ b/_posts/2000-01-03-workex.md
@@ -34,7 +34,7 @@ I invented a human-centered financial framework. The [product wiki](https://iced
 >
 > *<cite>[icedtea.app](https://icedtea.app)</cite>*
 
-My family has been using icedtea since 2016. As of now, the projects consits of these parts:
+My family has been using icedtea since 2016. As of now, the projects consists of these parts:
 + data: API, downloaded data, SQL Server
 + models: Python
 + interface: Django, Flask 
@@ -75,14 +75,14 @@ I created the product stack that provides insight and actionables for business l
 Some Highlights:
 
 + **Cash Logistics**\
-I authored a demand forecasting algorithm that single-handedly decreased ATM costs by 5%. I authored and owned the product used to manage 15% of India’s ATMs.
+I authored a demand forecasting asgorithm that single-handedly decreased ATM costs by 5%. I authored and owned the product used to manage 15% of India’s ATMs.
 + **Business Finance**\
-I authored the annual budget individually for 50,000 profit centers broken by week based on seasonal demand, life cycle behaviour, gross national trends, and political assumptions.
+I authored the annual budget individually for 50,000 profit centers broken by week based on seasonal demand, life cycle behavior, gross national trends, and political assumptions.
 It allowed business leaders to identify problems as they happened.
 
 #### **Intrapreneurship**
 
-I was in the management team that conducted monthy performance reviews of the entire company. When suitable problems were identified in any department, I set up processes, built up teams and managed the projects until it they attained operational stability.
+I was in the management team that conducted monthly performance reviews of the entire company. When suitable problems were identified in any department, I set up processes, built up teams and managed the projects until it they attained operational stability.
 
 Some highlights:
 
