--- a/_posts/2000-01-03-workex.md
+++ b/_posts/2000-01-03-workex.md
@@ -70,7 +70,7 @@ Under Hitachi's aegis, I built systems and instituted programs across the compan
 
 #### **Data Products, Head**
 
-I created the product stack that provides insight and actionables for business leaders across the firm. It's functionality spans assimilating primary data to managing remedial workflow at individual profit centers. I created the data warehouse and the business intelligence layer that provides the 'Single Source of Truth' for leaders and operators.
+I created the product stack that provides insight and actionables to business leaders across the firm. It's functionality spans assimilating primary data to managing remedial workflow at individual profit centers. I created the data warehouse and the business intelligence layer that provides the 'Single Source of Truth' for leaders and operators.
 
 Some Highlights:
 
@@ -91,7 +91,7 @@ When the business grew large enough to render escalation based prioritization me
 + **Company Culture**\
 When inter departmental coordination was recognized as a problem, I established a team of Territory Managers to own remedial actions. I created a weekly meeting format in which a managers took a 'data & story' approach to present how they solved problems. It fostered a culture of peer learning, nurtured relationships, and delivered quick results. Many managers later moved into other important roles in the company.
 
-#### **Others**
+#### **Other**
 
 + I recruited 6 people from my personal extended network at the Assistant Vice President level or higher.
 + I conducted discussions on the financial projections of the company with prospective partners and investors.
