--- a/_posts/2000-01-02-career.md
+++ b/_posts/2000-01-02-career.md
@@ -5,7 +5,7 @@ color: black
 # fa-icon: check-square-o
 ---
 
-## Career: 14 years
+## **Career: 14 years**
 
 I thrive on autonomy.\
 I value impact over status.\
