--- a/_posts/2000-01-03-workex.md
+++ b/_posts/2000-01-03-workex.md
@@ -99,7 +99,7 @@ When inter departmental coordination was recognized as a problem, I established 
 
 - - -
 
-### Exotic Derivatives Trading: 2007-2011 {#exotic}
+### **Exotic Derivatives Trading: 2007-2011** {#exotic}
 
 *Associate*
 
@@ -109,7 +109,7 @@ At Lehman Brothers and Nomura, I managed trading books worth an excess of 1 bill
 
 - - -
 
-### Surrey Space Centre: 3 months in 2005 {#space}
+### **Surrey Space Centre: 3 months in 2005** {#space}
 *Internee*
 
 + I built a 6-legged robot and explored the impact of gait on power consumption.
