--- a/_posts/2000-01-05-hobbies.md
+++ b/_posts/2000-01-05-hobbies.md
@@ -5,7 +5,7 @@ color: black
 # fa-icon: plug
 ---
 
-## Hobbies
+## **Hobbies**
 I take my Hobbies seriously.\
 I nurture them over years, and often chose those that can improve other aspects of my life.\
 For example:
