--- a/_posts/2000-01-06-contact.md
+++ b/_posts/2000-01-06-contact.md
@@ -5,7 +5,7 @@ color: black
 # fa-icon: cloud-upload
 ---
 
-## Contact
+## **Contact**
 
 <manogna@gmail.com>{:target="_blank"} is the best way to get in touch with me directly.
 
@@ -13,13 +13,13 @@ color: black
 
 [mull.in](https://mull.in){:target="_blank"} is my blog about keyboards, travel, writing and other interests.
 
-### community engagement
+#### **community engagement**
 
 + on open-source projects as [manogna4](https://github.com/manogna4){:target="_blank"} on github
 + on keyboards and linguistics as [manogna4](https://www.reddit.com/user/manogna4){:target="_blank"} on reddit
 + with the [obsidian](https://obsidian.md/){:target="_blank"} communitiy on it's [forum](https://forum.obsidian.md/u/mano/summary){:target="_blank"} and discord server
 + with the [imdone](https://imdone.io/){:target="_blank"} community on it's discord server
 
-### networks
+#### **networks**
 
 I am on linked in as [Manogna-Mano](https://www.linkedin.com/in/manogna-mano){:target="_blank"}
