--- a/_posts/2000-01-05-uni.md
+++ b/_posts/2000-01-05-uni.md
@@ -5,8 +5,10 @@ color: black
 # fa-icon: plug
 ---
 
-## University: 2002-2007
-### IIT-Madras (Indian Institute of Technology)
+## **University: 2002-2007**
+
+### **IIT-Madras** *(Indian Institute of Technology)*
+
 I majored in Aerospace Engineering:
 + B.Tech & M.Tech (Dual Degree)
 + focus on Space Enginerring
@@ -16,7 +18,7 @@ I minored in Communication.
 
 I explored the Liberal Arts with courses in Creative Writing, Science Fiction, Drama, Linguistics, Discourse Strategies, etc..
 
-#### Extra Curriculars
+#### **Extra Curriculars**
 
 + I won awards in debates, speaking events, writing and dramatics.
 + I was the Public Relations co-head of the university cutural festival, Saarang.
