--- a/_posts/2000-01-02-career.md
+++ b/_posts/2000-01-02-career.md
@@ -48,5 +48,5 @@ I am attracted to fundamental, human-centered problems.\
 I like to approach the solution from first principles.
 
 I am eager to acquire entirely new skills in pursuit of an appropriate solution.\
-I am adept at extending and adapting techniques beyond their original 
+I am adept at extending and adapting techniques beyond their original scope.
 
