--- a/_posts/2000-01-03-workex.md
+++ b/_posts/2000-01-03-workex.md
@@ -34,7 +34,7 @@ I invented a human-centered financial framework. The [product wiki](https://iced
 >
 > *<cite>[icedtea.app](https://icedtea.app)</cite>*
 
-My family has been using icedtea since 2016. As of now, the projects consists of these parts:
+My family has been using icedtea since 2016. As of now, the project consists of these parts:
 + data: API, downloaded data, SQL Server
 + models: Python
 + interface: Django, Flask 
@@ -46,7 +46,11 @@ My career goal is to make icedtea a public product.
 
 #### **Related Projects**
 
-With icedtea as the primary goal, I worked on multiple related projects while acquiring and honing relevant expertise.
+I began viewing my career as an evolving portfolio of projects, instead of a sequence of monolithic jobs.
+
+So, with icedtea as a target, while maintaining my involvement at [Hitachi Payments]{#hpy}, I worked on multiple related projects, acquiring and honing relevant expertise along the way.
+
+The projects crystallized along these themes:
 
 **[Custom Keyboards](http://mull.in/tags/keyboard/){:target="_blank"}**
 + I invented and adopted an easily transition-able, [ergonomic alternate](https://mull.in/posts/qwerty-alternate/){:target="_blank"} to the standard QWERTY layout. I quantified the benefit, and described the steps to transition in descending order of effectiveness.
