style and links

--- a/_posts/2000-01-01-mano.md
+++ b/_posts/2000-01-01-mano.md
@@ -7,7 +7,7 @@ color: black
 
 **Hi, I am Mano.**\
 My documents insist I should go by 'Manogna Mano'.\
-<manogna@gmail.com>{:target="_blank"} is the best way to get in touch with me.
+<manogna@gmail.com> is the best way to get in touch with me.
 
 I am an Intrapreneur, a Data Professional and a Product Designer.\
 A friend suggested I shorten it all to 'Full Stack Analytics Leader', so I will.\
