--- a/_posts/2000-01-03-workex.md
+++ b/_posts/2000-01-03-workex.md
@@ -22,7 +22,7 @@ color: black
 
 - - -
 
-### **icedtea.app: 2015-today** {#icedtea}
+### **icedtea.app: 2015-today** [↑](#workex) {#icedtea}
 
 I invented a human-centered financial framework. The [product wiki](https://icedtea.app){:target="_blank"} explains the concept better:
 
@@ -63,7 +63,7 @@ The projects crystallized along these themes:
 
 - - -
 
-### **Hitachi Payments: 2011-today** {#hpy}
+### **Hitachi Payments: 2011-today** [↑](#workex) {#hpy}
 
 *Vice President*
 
@@ -103,7 +103,7 @@ When inter departmental coordination was recognized as a problem, I established 
 
 - - -
 
-### **Exotic Derivatives Trading: 2007-2011** {#exotic}
+### **Exotic Derivatives Trading: 2007-2011** [↑](#workex) {#exotic}
 
 *Associate*
 
@@ -113,7 +113,7 @@ At Lehman Brothers and Nomura, I managed trading books worth an excess of 1 bill
 
 - - -
 
-### **Surrey Space Centre: 3 months in 2005** {#space}
+### **Surrey Space Centre: 3 months in 2005** [↑](#workex) {#space}
 *Internee*
 
 + I built a 6-legged robot and explored the impact of gait on power consumption.
