--- a/_posts/2000-01-06-contact.md
+++ b/_posts/2000-01-06-contact.md
@@ -15,11 +15,11 @@ color: black
 
 #### **community engagement**
 
-+ on open-source projects as [manogna4](https://github.com/manogna4){:target="_blank"} on github
-+ on keyboards and linguistics as [manogna4](https://www.reddit.com/user/manogna4){:target="_blank"} on reddit
-+ with the [obsidian](https://obsidian.md/){:target="_blank"} communitiy on it's [forum](https://forum.obsidian.md/u/mano/summary){:target="_blank"} and discord server
-+ with the [imdone](https://imdone.io/){:target="_blank"} community on it's discord server
++ on open-source projects as [manogna4](https://github.com/manogna4){:target="_blank"} on github.
++ on keyboards and linguistics as [manogna4](https://www.reddit.com/user/manogna4){:target="_blank"} on reddit.
++ with the [obsidian](https://obsidian.md/){:target="_blank"} communitiy on it's [forum](https://forum.obsidian.md/u/mano/summary){:target="_blank"} and discord server.
++ with the [imdone](https://imdone.io/){:target="_blank"} community on it's discord server.
 
 #### **networks**
 
-I am on linked in as [Manogna-Mano](https://www.linkedin.com/in/manogna-mano){:target="_blank"}
+I am on linked in as [Manogna-Mano](https://www.linkedin.com/in/manogna-mano){:target="_blank"}.
