--- a/_posts/2000-01-03-workex.md
+++ b/_posts/2000-01-03-workex.md
@@ -48,7 +48,7 @@ My career goal is to make icedtea a public product.
 
 I began viewing my career as an evolving portfolio of projects, instead of a sequence of monolithic jobs.
 
-So, with icedtea as a target, while maintaining my involvement at [Hitachi Payments]{#hpy}, I worked on multiple related projects, acquiring and honing relevant expertise along the way.
+So, with icedtea as a target, while maintaining my involvement at [Hitachi Payments](#hpy), I worked on multiple related projects, acquiring and honing relevant expertise along the way.
 
 The projects crystallized along these themes:
 
@@ -82,7 +82,7 @@ Some Highlights:
 I authored a demand-forecasting algorithm that single-handedly decreased ATM costs by 5%. I authored and owned the product used to manage 15% of India’s ATMs.
 + **Business Finance**\
 I authored the annual budget individually for 50,000 profit centers broken by week based on seasonal demand, life cycle behavior, gross national trends, and political assumptions.
-It allowed business leaders to identify problems as they happened.
+It allowed business leaders to identify problems as they arose.
 
 #### **Intrapreneurship**
 
