--- a/_posts/2000-01-03-workex.md
+++ b/_posts/2000-01-03-workex.md
@@ -67,10 +67,9 @@ The projects crystallized along these themes:
 
 *Vice President*
 
-I joined the company in the early stages, when it was Prizm Payments. I was part of the core team of business leaders and played a key role in scaling it up to become a compelling acquisition for Hitachi (and others).
+**10x**: The growth I helped the founding team at Prizm Payments achieve before it was acquired by Hitachi for about 250 million $. As the Analytics Leader and member of the core team, I played a key role in this growth.
 
-Under Hitachi's aegis, I built systems and instituted programs across the company that have an extensive, sustained impact on profitability and efficiency.
-
+**4x**: The growth I helped the company achieve under Hitachi's aegis, by instituting programs and building data-products across verticals that continue to have an extensive impact on profitability and efficiency.
 
 #### **Data Products, Head**
 
