added para in `mano`

--- a/_posts/2000-01-01-mano.md
+++ b/_posts/2000-01-01-mano.md
@@ -13,6 +13,10 @@ I am an Intrapreneur, a Data Professional and a Product Designer.\
 A friend suggested I shorten it all to 'Full Stack Analytics Leader', so I will.\
 **I am a Full Stack Analytics Leader.**
 
+I helped Prizm Payments grow 10x to 250m$ and get acquired by Hitachi.\
+I helped Hitachi Payments grow 4x after acquisition.\
+**I value impact and thrive with autonomy.**
+
 I invented a human-centered financial framework.\
 It helps families by tinkering with their lifestyle, instead of overwhelming them with jargon.\
 I call it icedtea. I am working on the app layer...\
