--- a/_posts/2000-01-06-contact.md
+++ b/_posts/2000-01-06-contact.md
@@ -22,4 +22,4 @@ color: black
 
 #### **networks**
 
-I am on linked in as [Manogna-Mano](https://www.linkedin.com/in/manogna-mano){:target="_blank"}.
+I am on LinkedIn as [Manogna-Mano](https://www.linkedin.com/in/manogna-mano){:target="_blank"}.
